# stark-repo-analyzer-skill

./: .codex-v2.1.0-deepwiki-spec.md  .codex-v2.1.0-issue-1.md  .codex-v2.1.0-issue-2.md  .codex-v2.1.0-issue-3.md  .codex-v2.1.0-issue-4.md  .codex-v2.1.0-issue-5.md  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  README.zh.md  SKILL.md  codex-events.jsonl  goals.txt  package.json  pyproject.toml  tasks.txt  tickets-v2.md  tickets.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: hooks.json
.codex-plugin/: plugin.json
.planning/: .active_plan
acceptance/: 04-link.sh  05-mermaid-judge.sh  doctor-self-test.sh  doctor.sh  implementation-fixture-check.sh  llm-judge.sh  physical-baseline-check.sh  physical-repeatability-check.sh  run-contract-check.sh  skill-contract-check.sh  skill-structure-check.sh
analysis/: PLAN.md
config/: defaults.example.yaml  repo-types.yaml
decisions/: 0007-sla-budget.md  0008-flags-classification.md  0010-positioning-pitch.md  0015-failed-module-section.md
dev-rules/: README.md
docs/: README.md  RULES-SOP.md  adversarial-review-painpoints-2026-07-09.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
references/: ARCH_UNFINISHED_FEATURES.md  GLOSSARY.md  PLAN.md  PLAN_COMPLIANCE.md  PRD_UNFINISHED_FEATURES.md  class-diagram.mermaid  sequence-diagram.mermaid
scripts/: analyzer_acceptance.py  analyzer_agent.py  analyzer_checkout.py  analyzer_common.py  analyzer_config.py  analyzer_coverage.py  analyzer_crossref.py  (+13 more)
(+1242 files in other folders)
