[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stark-repo-analyzer"
version = "1.0.0"
description = "Agent-native architectural repository analysis with Graphify evidence gates"
requires-python = ">=3.10"

[project.scripts]
stark-repo-analyzer-graphify-gate = "stark_repo_analyzer.graphify_gate:main"

[tool.setuptools.packages.find]
where = ["src"]
