[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stark-repo-analyzer-dev"
version = "0.0.0"
description = "Development tooling configuration only; the product is the Skill core package under skills/repo-analyzer/"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = []
